# sync_with_pdm

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  tests.yml
sync_with_pdm/: swp.py
tests/: helpers.py  pyproject_test.toml  test_lock_parser.py  test_mapping.py  test_meta.py  test_sync_repos.py
